Display Time & Date

--- a/startpage.html
+++ b/startpage.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Start Page</title>
         <link rel="stylesheet" href="style.css" />
+        <script src="script.js" defer></script>
     </head>
     <body>
         <h1 id="time" class="reveal">
@@ -12,21 +13,21 @@
             <span id="column">:</span>
             <span id="minute">00</span>
         </h1>
-        <p id="date" class="reveal delay400">18 October, Sunday</p>
+        <p id="date" class="reveal delay200">18 October, Sunday</p>
 
         <div id="lists">
             <div class="list">
-                <h1 class="reveal delay800">favourites</h1>
-                <a class="reveal delay1000" target="_blank" href="https://youtube.com" class="red">youtube</a>
-                <a class="reveal delay1200" target="_blank" href="https://notion.so">notion</a>
-                <a class="reveal delay1400" target="_blank" href="https://epicgames.com">epic games</a>
+                <h1 class="reveal delay400">favourites</h1>
+                <a class="reveal delay600 red" target="_blank" href="https://youtube.com">youtube</a>
+                <a class="reveal delay800" target="_blank" href="https://notion.so">notion</a>
+                <a class="reveal delay1000" target="_blank" href="https://epicgames.com">epic games</a>
             </div>
             <div class="list">
-                <h1 class="reveal delay800">read</h1>
-                <a class="reveal delay1000" target="_blank" href="https://dev.to">dev.to</a>
-                <a class="reveal delay1200" target="_blank" href="https://indiehackers.com" class="green">indie hackers</a>
-                <a class="reveal delay1400" target="_blank" href="https://hashnode.com/community" class="blue">hashnode</a>
-                <a class="reveal delay1600" target="_blank" href="https://medium.com" class="green">medium</a>
+                <h1 class="reveal delay400">read</h1>
+                <a class="reveal delay600" target="_blank" href="https://dev.to">dev.to</a>
+                <a class="reveal delay800 green" target="_blank" href="https://indiehackers.com">indie hackers</a>
+                <a class="reveal delay1000 blue" target="_blank" href="https://hashnode.com/community">hashnode</a>
+                <a class="reveal delay1200 green" target="_blank" href="https://medium.com">medium</a>
             </div>
         </div>
     </body>
