Add GitHub and LeetCode

--- a/startpage.html
+++ b/startpage.html
@@ -21,6 +21,8 @@
                 <a class="reveal delay600 red" target="_blank" href="https://youtube.com">youtube</a>
                 <a class="reveal delay800" target="_blank" href="https://notion.so">notion</a>
                 <a class="reveal delay1000" target="_blank" href="https://epicgames.com">epic games</a>
+                <a class="reveal delay1200 yellow" target="_blank" href="https://leetcode.com">leetcode</a>
+                <a class="reveal delay1400" target="_blank" href="https://github.com">github</a>
             </div>
             <div class="list">
                 <h1 class="reveal delay400">read</h1>
