--- a/startpage.html
+++ b/startpage.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
+
     <body>
         <h1 id="time" class="reveal">
             <span id="hour">12</span>
@@ -18,18 +19,18 @@
         <div id="lists">
             <div class="list">
                 <h1 class="reveal delay400">favourites</h1>
-                <a class="reveal delay600 red" target="_blank" href="https://youtube.com">youtube</a>
-                <a class="reveal delay800" target="_blank" href="https://notion.so">notion</a>
-                <a class="reveal delay1000" target="_blank" href="https://epicgames.com">epic games</a>
-                <a class="reveal delay1200 yellow" target="_blank" href="https://leetcode.com">leetcode</a>
-                <a class="reveal delay1400" target="_blank" href="https://github.com">github</a>
+                <a target="_blank" class="reveal delay600 red" href="https://youtube.com">youtube</a>
+                <a target="_blank" class="reveal delay800" href="https://notion.so">notion</a>
+                <a target="_blank" class="reveal delay1000" href="https://epicgames.com">epic games</a>
+                <a target="_blank" class="reveal delay1200 yellow" href="https://leetcode.com">leetcode</a>
+                <a target="_blank" class="reveal delay1400" href="https://github.com">github</a>
             </div>
             <div class="list">
                 <h1 class="reveal delay400">read</h1>
-                <a class="reveal delay600" target="_blank" href="https://dev.to">dev.to</a>
-                <a class="reveal delay800 green" target="_blank" href="https://indiehackers.com">indie hackers</a>
-                <a class="reveal delay1000 blue" target="_blank" href="https://hashnode.com/community">hashnode</a>
-                <a class="reveal delay1200 green" target="_blank" href="https://medium.com">medium</a>
+                <a target="_blank" class="reveal delay600" href="https://dev.to">dev.to</a>
+                <a target="_blank" class="reveal delay800 green" href="https://indiehackers.com">indie hackers</a>
+                <a target="_blank" class="reveal delay1000 blue" href="https://hashnode.com/community">hashnode</a>
+                <a target="_blank" class="reveal delay1200 green" href="https://medium.com">medium</a>
             </div>
         </div>
     </body>
